--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -1347,14 +1347,17 @@ impute_missing_recipe
 hidden_print_cli(impute_missing_recipe)
 ```
 
-Applying the recipe to the `missing_cancer` data frame fills in the missing entries with the mean values of their corresponding variables.
+We can now include this recipe in a `workflow`. To visualize what mean imputation does, 
+let's just apply the recipe directly to the `missing_cancer` data frame using the `bake` function.
+The imputation step fills in the missing entries with the mean values of their corresponding variables.
 
 ```{r 05-impute-bake}
 imputed_cancer <- bake(impute_missing_recipe, missing_cancer)
 imputed_cancer
 ```
 
-Many other options for missing data imputation can be found in [the `recipes` documentation](https://recipes.tidymodels.org/reference/index.html).
+Many other options for missing data imputation can
+be found in [the `recipes` documentation](https://recipes.tidymodels.org/reference/index.html).
 However you decide to handle missing data in your data analysis, it is always crucial 
 to think critically about the setting, how the data were collected, and the question you are answering.
 
