--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -387,7 +387,7 @@ canlang_data
 ```
 
 ### Reading tabular data directly from a URL
-We can also use `read_csv`, `read_tsv` or `read_delim` (and related functions)
+We can also use `read_csv`, `read_tsv`, or `read_delim` (and related functions)
 to read in data directly from a **U**niform **R**esource **L**ocator (URL) that
 contains tabular data. \index{URL!reading from} Here, we provide the URL of a remote file to
 `read_*`, instead of a path to a local file on our
@@ -399,6 +399,24 @@ when using these functions with a local file on our computer.
 url <- "https://raw.githubusercontent.com/UBC-DSCI/data/main/can_lang.csv"
 canlang_data <- read_csv(url)
 
+canlang_data
+```
+
+### Downloading data from a URL
+Occasionally the data available at a URL is not formatted nicely enough to use
+`read_csv`, `read_tsv`, `read_delim`, or other related functions to read the data
+directly into R. In situations where it is necessary to download a file
+to our local computer prior to working with it in R, we can use the `download.file`
+function. The first argument is the URL, and the second is a path where we would 
+like to store the downloaded file.
+
+```r
+download.file(url, "data/can_lang.csv")
+canlang_data <- read_csv("data/can_lang.csv")
+canlang_data
+```
+
+```{r echo=FALSE, warning = FALSE}
 canlang_data
 ```
 
