--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -132,7 +132,7 @@ In the example in Table \@ref(tab:confusion-matrix), we see that there was
 1 malignant observation that was correctly classified as malignant (top left corner),
 and 57 benign observations that were correctly classified as benign (bottom right corner).
 However, we can also see that the classifier made some mistakes:
-it identified 3 malignant observations as benign, and 4 benign observations as
+it classified 3 malignant observations as benign, and 4 benign observations as
 malignant. The accuracy of this classifier is roughly
 89%, given by the formula
 
