--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -141,7 +141,7 @@ malignant. The accuracy of this classifier is roughly
 $$\mathrm{accuracy} = \frac{\mathrm{number \; of  \; correct  \; predictions}}{\mathrm{total \;  number \;  of  \; predictions}} = \frac{1+57}{1+57+4+3} = 0.892$$
 
 But we can also see that the classifier only identified 1 out of 4 total malignant
-tumors; in other words, it missed 75% of the malignant cases present in the
+tumors; in other words, it misclassified 75% of the malignant cases present in the
 data set! Since we are particularly interested in identifying malignant cases
 in this data analysis context, this classifier would likely be unacceptable
 even with an accuracy of 89%.
