more writing improvements in classfcn2 prec/rec

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -75,7 +75,7 @@ and the classifier will be asked to decide whether the tumor is benign or
 malignant. The key word here is *new*: our classifier is "good" if it provides
 accurate predictions on data *not seen during training*, as this implies that
 it has actually learned about the relationship between the predictor variables and response variable,
-as opposed to simply memorizing and regurgitating individual training data examples. 
+as opposed to simply memorizing the labels of individual training data examples. 
 But then, how can we evaluate our classifier without visiting the hospital to collect more
 tumor images? 
 
@@ -142,9 +142,10 @@ $$\mathrm{accuracy} = \frac{\mathrm{number \; of  \; correct  \; predictions}}{\
 
 But we can also see that the classifier only identified 1 out of 4 total malignant
 tumors; in other words, it misclassified 75% of the malignant cases present in the
-data set! Since we are particularly interested in identifying malignant cases
-in this data analysis context, this classifier would likely be unacceptable
-even with an accuracy of 89%.
+data set! In this example, misclassifying a malignant tumor is a potentially
+disastrous error, since it may lead to a patient who requires treatment not receiving it.
+Since we are particularly interested in identifying malignant cases, this 
+classifier would likely be unacceptable even with an accuracy of 89%.
 
 Focusing more on one label than the other is
 common in classification problems. In such cases, we typically refer to the label we are more
