wordsmithing text lead-in to prec/rec

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -160,12 +160,10 @@ classifier can make, corresponding to the four entries in the confusion matrix:
 - **True Negative:** A benign observation that was classified as benign (bottom right in Table \@ref(tab:confusion-matrix)).
 - **False Negative:** A malignant observation that was classified as benign (bottom left in Table \@ref(tab:confusion-matrix)).
 
-A perfect classifier would have zero False Negatives and False Positives.
-However,
-in practice there will always be some error in the model,
-so it is important to think about what type of errors we think are more harmful,
-which we discuss in detail in section \@ref(critically-analyze-performance)
-Two commonly used metrics that capture part of what the confusion matrix is telling us are the **precision** and **recall** of the classifier which are often reported together with accuracy.
+A perfect classifier would have zero false negatives and false positives (and therefore, 100% accuracy).
+However, real classifiers in practice will almost always make some mistakes, so it is important to think 
+about what type of error is more harmful. Two commonly used metrics that we can compute using the confusion matrix 
+are the **precision** and **recall** of the classifier. These are often reported together with accuracy.
 *Precision* quantifies how many of the positive predictions the classifier made were actually positive. Intuitively,
 we would like a classifier to have a *high* precision: for a classifier with high precision, if the 
 classifier reports that a new observation is positive, we can trust that that
