--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -160,22 +160,28 @@ classifier can make, corresponding to the four entries in the confusion matrix:
 - **True Negative:** A benign observation that was classified as benign (bottom right in Table \@ref(tab:confusion-matrix)).
 - **False Negative:** A malignant observation that was classified as benign (bottom left in Table \@ref(tab:confusion-matrix)).
 
-A perfect classifier would have zero false negatives and false positives (and therefore, 100% accuracy).
-However, real classifiers in practice will almost always make some mistakes, so it is important to think 
-about what type of error is more harmful. Two commonly used metrics that we can compute using the confusion matrix 
-are the **precision** and **recall** of the classifier. These are often reported together with accuracy.
-*Precision* quantifies how many of the positive predictions the classifier made were actually positive. Intuitively,
-we would like a classifier to have a *high* precision: for a classifier with high precision, if the 
-classifier reports that a new observation is positive, we can trust that that
-new observation is indeed positive. We can compute
-the precision of a classifier using the entries in the confusion matrix, with the formula
+A perfect classifier would have zero false negatives and false positives (and
+therefore, 100% accuracy). However, classifiers in practice will almost always
+make some errors. So you should think about which kinds of error are most
+important in your application, and use the confusion matrix to quantify and
+report them. Two commonly used metrics that we can compute using the confusion
+matrix are the **precision** and **recall** of the classifier. These are often
+reported together with accuracy.  *Precision* quantifies how many of the
+positive predictions the classifier made were actually positive. Intuitively,
+we would like a classifier to have a *high* precision: for a classifier with
+high precision, if the classifier reports that a new observation is positive,
+we can trust that that new observation is indeed positive. We can compute the
+precision of a classifier using the entries in the confusion matrix, with the
+formula
 
 $$\mathrm{precision} = \frac{\mathrm{number \; of  \; correct \; positive \; predictions}}{\mathrm{total \;  number \;  of \; positive  \; predictions}}.$$
 
-*Recall* quantifies how many of the positive observations in the test set were identified as positive. Intuitively, we would like
-a classifier to have a *high* recall: for a classifier with high recall, if there is a positive observation in the test data, we can trust 
-that the classifier will find it.
-We can also compute the recall of the classifier using the entries in the confusion matrix, with the formula
+*Recall* quantifies how many of the positive observations in the test set were
+identified as positive. Intuitively, we would like a classifier to have a
+*high* recall: for a classifier with high recall, if there is a positive
+observation in the test data, we can trust that the classifier will find it.
+We can also compute the recall of the classifier using the entries in the
+confusion matrix, with the formula
 
 $$\mathrm{recall} = \frac{\mathrm{number \; of  \; correct  \; positive \; predictions}}{\mathrm{total \;  number \;  of  \; positive \; test \; set \; observations}}.$$
 
@@ -183,17 +189,25 @@ In the example presented in Table \@ref(tab:confusion-matrix), we have that the 
 
 $$\mathrm{precision} = \frac{1}{1+4} = 0.20, \quad \mathrm{recall} = \frac{1}{1+3} = 0.25.$$
 
-So even with an accuracy of 89%, the precision and recall of the classifier were both relatively low. For this data analysis
-context, recall is particularly important: if someone has a malignant tumor, we certainly want to identify it.
-A recall of just 25% would likely be unacceptable!
+So even with an accuracy of 89%, the precision and recall of the classifier
+were both relatively low. For this data analysis context, recall is
+particularly important: if someone has a malignant tumor, we certainly want to
+identify it.  A recall of just 25% would likely be unacceptable!
 
-> **Note:** It is difficult to achieve both high precision and high recall at the same time; models with high precision tend to have low recall and vice versa.
-> As an example, we can easily make a classifier that has *perfect recall*: just *always* guess positive! This classifier will of course find every
-> positive observation in the test set, but it will make lots of false positive predictions along the way  and have low precision. Similarly, we can easily
-> make a classifier that has *perfect precision*: *never* guess positive! This classifier will never incorrectly identify an obsevation as positive,
-> but it will make a lot of false negative predictions along the way. In fact, this classifier will have 0% recall! Of course, most real classifiers fall somewhere
-> in between these two extremes. But these examples serve to show that in settings where one of the classes is of interest (i.e., there is a *positive* label),
-> there is a trade-off between precision and recall that one has to make when designing a classifier.
+> **Note:** It is difficult to achieve both high precision and high recall at
+> the same time; models with high precision tend to have low recall and vice
+> versa.  As an example, we can easily make a classifier that has *perfect
+> recall*: just *always* guess positive! This classifier will of course find
+> every positive observation in the test set, but it will make lots of false
+> positive predictions along the way  and have low precision. Similarly, we can
+> easily make a classifier that has *perfect precision*: *never* guess
+> positive! This classifier will never incorrectly identify an obsevation as
+> positive, but it will make a lot of false negative predictions along the way.
+> In fact, this classifier will have 0% recall! Of course, most real
+> classifiers fall somewhere in between these two extremes. But these examples
+> serve to show that in settings where one of the classes is of interest (i.e.,
+> there is a *positive* label), there is a trade-off between precision and recall that one has to
+> make when designing a classifier.
 
 ## Randomness and seeds {#randomseeds}
 Beginning in this chapter, our data analyses will often involve the use
